[gd_scene load_steps=4 format=2]

[ext_resource path="res://Theme/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Theme/MainFontHuge.tres" type="DynamicFont" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RootVBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.0
margin_top = -112.0
margin_right = 166.0
margin_bottom = 112.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="RootVBoxContainer"]
margin_right = 332.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 3 )
text = "GGJ 2022"

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="RootVBoxContainer"]
margin_left = 131.0
margin_top = 115.0
margin_right = 200.0
margin_bottom = 224.0
size_flags_horizontal = 4
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="RootVBoxContainer/ButtonsVBoxContainer"]
margin_right = 69.0
margin_bottom = 23.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Play"

[node name="CreditsButton" type="Button" parent="RootVBoxContainer/ButtonsVBoxContainer"]
margin_top = 43.0
margin_right = 69.0
margin_bottom = 66.0
text = "Credits"

[node name="QuitButton" type="Button" parent="RootVBoxContainer/ButtonsVBoxContainer"]
margin_top = 86.0
margin_right = 69.0
margin_bottom = 109.0
focus_neighbour_bottom = NodePath("../PlayButton")
text = "Quit"

[connection signal="pressed" from="RootVBoxContainer/ButtonsVBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="RootVBoxContainer/ButtonsVBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
